@@ -1,9 +1,10 @@
 File Name: CHANGES
 
-02/08/2021 FASP 2.6.2:
+02/10/2021 FASP 2.6.2:
 - Update output information for UA AMG setup;
 - Add decoup_type for choosing decoupling methods in BSR;
-- Update test problems in main/test.c.
+- Update test problems in main/test.c;
+- Update CMake external packages.
 
 02/05/2021 FASP 2.6.1:
 - Add uninstall target to the new CMakeFile.txt;
